--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ body {
 
 .headline-employe {
   text-align: center;
-  font-size: 32px 0 32px;
+  padding: 32px 0 32px;
   line-height: 1.11;
 
   letter-spacing: 0.02em;
