--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,11 @@ body {
   color: var(--text-color);
 }
 
+/* new */
+.content-wrap {
+  padding: 32px 0 32px;
+}
+
 /*footer  */
 .footer-content {
   display: block;
