--- a/css/style.css
+++ b/css/style.css
@@ -268,9 +268,7 @@ body {
   margin-right: 0px;
 }
 
-.wrap-title {
-  padding: 32px 16px;
-}
+
 
 .title {
   font-weight: 500;
@@ -501,10 +499,12 @@ body {
   color: var(--text-color);
 }
 
-/* new */
-.content-wrap {
-  padding: 32px 0 32px;
+.wrap-title-list {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
+
+
 
 /*footer  */
 .footer-content {
